# miniprojekti

./: .coveragerc  .env.example  .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  retro.md  run_robot_tests.sh
.github/workflows/: ci.yaml
src/: .env.example  app.py  config.py  create_database.py  db_helper.py  migrate.py  setup.py  util.py
src/entities/: factories.py  reference.py  todo.py
src/repositories/: reference_repository.py  todo_repository.py
src/story_tests/: delete_reference.robot  input_form.robot  new_reference.robot  resource.robot  search_reference.robot  single_reference_page.robot  sort_references.robot  todos.robot  update_reference.robot
src/templates/: bibtex.html  bibtext.html  index.html  layout.html  new_reference.html  new_todo.html  reference.html  update_reference.html
src/templates/elements/: button.html
src/tests/: AppLibrary.py  article_form_factory_test.py  book_form_factory_test.py  inproceedings_form_factory_test.py  reference_repository_test.py  reference_test.py  resource.robot  todos.robot  validate_reference_test.py  validate_todo_test.py
tests/: resource.robot
